deleted unnecessary files and added bootstrap to resource model

--- a/app/assets/stylesheets/resources.css.scss
+++ b/app/assets/stylesheets/resources.css.scss
@@ -1,4 +1,4 @@
-.resources {
+/*.resources {
   table {
     border-collapse: collapse;
   }
@@ -50,4 +50,4 @@
         display: none;
     }
   }
-}
+}*/
