--- a/app/views/resources/edit.html.erb
+++ b/app/views/resources/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>Editing <%= ResourceName %></h1>
-
+<div class="page-header">
+  <h1>Editing <%= ResourceName %></h1>
+</div>
 <%= render 'form' %>
-
-<%= link_to 'Back', resources_path %>
+<%= link_to 'Back To Listings', resources_path, :class => "btn" %>
