--- a/app/views/fields/_form.html.erb
+++ b/app/views/fields/_form.html.erb
@@ -1,37 +1,60 @@
-<%= form_for @field, html: {class: "form_for_edit"} do |f| %>
-  <table>
-      <tr>
-        <td>Field Name: <td><%= f.text_field :name %>
-      </tr>
-      <tr>
-        <td>Display Name: <td><%= f.text_field :display_name %>
-      </tr>
-      <tr>
-        <td>Input Type: <td><%= f.select :input_type, InputTypeArray%>
-      </tr>
-      <tr>
-        <td>Field Type: <td><%= f.select :field_type, FieldTypeArray%>
-      </tr>
-      <tr>
-        <td>Default Value: <td><%= f.text_field :default_value %>
-      </tr>
-      <tr>
-        <td>Options:</td> 
-        <td id="options_container_for_edit" >
-          <% if @field.options.present? %>
-            <% @field.options.each do |hash| %>
-              <div>
+<%= form_for @field, :html => {:class => "form_for_edit form-horizontal"} do |f| %>
+
+  <div class="control-group">
+    <%= f.label 'Field Name', :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :name %>
+    </div>
+  </div>
+
+  <div class="control-group">
+    <%= f.label 'Display Name', :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :display_name %>
+    </div>
+  </div>
+
+  <div class="control-group">
+    <%= f.label 'Input Type', :class => 'control-label' %>
+    <div class="controls">
+      <%= f.select :input_type, InputTypeArray %>
+    </div>
+  </div>
+
+  <div class="control-group">
+    <%= f.label 'Field Type', :class => 'control-label' %>
+    <div class="controls">
+      <%= f.select :field_type, FieldTypeArray %>
+    </div>
+  </div>
+
+  <div class="control-group">
+    <%= f.label 'Default Value', :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :default_value %>
+    </div>
+  </div>
+
+  <div class="control-group">
+    <%= f.label 'Options', :class => 'control-label' %>
+    <div class="controls">
+      <div id="options_container_for_edit" >
+        <% if @field.options.present? %>
+          <% @field.options.each do |hash| %>
+            <div>
               <input name="field[options][][text]" type="text" value="<%= hash[:text] %>" />
               <input name="field[options][][value]" type="text" value="<%= hash[:value] %>" />
               <a class="link_to_remove_option_for_edit">[-] Remove</a>
-              </div>     
-            <% end %>
-            <a class="link_to_add_option_for_edit">[+] Add Another Option</a>
-          <% end %>        
-        </td>
-      </tr>
-    </table>
-  <div class="actions_for_edit">
-    <%= f.submit %>
+            </div>     
+          <% end %>
+          <a class="link_to_add_option_for_edit">[+] Add Another Option</a>
+        <% end %>
+      </div>
+    </div>
+  </div>
+
+  <div class="actions">
+    <%= f.submit 'Update', :class => "btn btn-primary" %>
+    <%= link_to 'Cancel', fields_path, :class => "btn" %>
   </div>
 <% end %>
