--- a/app/views/fields/_form_for_multiple_fields.html.erb
+++ b/app/views/fields/_form_for_multiple_fields.html.erb
@@ -1,8 +1,8 @@
-<%= form_tag({controller: "fields", action: "create_collection"}, class: "form_for_adding_fields") do %>
+<%= form_tag({controller: "fields", action: "create_collection"}, class: "form_for_adding_fields form-horizontal") do %>
   <div id = "fields" >
   </div>
-  <p>
-    <%= add_field_button( "Add a field", 'fields', { class: "form_add_field_button" }, partial: 'form_for_single_field', object: Field.new) %>
-  </p>
-  <%= submit_tag "Done", class: "form_submit_button"%>
+  <div class="actions">
+    <%= add_field_button( "Add a field", 'fields', { class: "form_add_field_button btn btn-primary" }, partial: 'form_for_single_field', object: Field.new) %>
+  	<%= submit_tag "Done", class: "form_submit_button btn btn-primary"%>
+  </div>
 <% end %>
