replaced .all with .pluck

--- a/app/views/fields/_form_for_single_field.html.erb
+++ b/app/views/fields/_form_for_single_field.html.erb
@@ -37,7 +37,7 @@
     </div>
 
     <div class="control-group">
-      <%= f.label 'OptionsL', :class => 'control-label' %>
+      <%= f.label 'Options', :class => 'control-label' %>
       <div class="controls">
         <div class="options_container">
         </div>
