--- a/app/views/fields/_form.html.erb
+++ b/app/views/fields/_form.html.erb
@@ -1,7 +1,18 @@
-<%= form_for @field, :html => {:class => "form_for_edit form-horizontal"} do |f| %>
+<%= form_for @field, :html => {:class => "form form-horizontal"} do |f| %>
+  
+  <% if @field.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@field.errors.count, "error") %> prohibited this cart from being saved:</h2>
+      <ul>
+        <% @field.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
 
   <div class="control-group">
-    <%= f.label 'Field Name', :class => 'control-label' %>
+    <%= f.label 'Name', :class => 'control-label' %>
     <div class="controls">
       <%= f.text_field :name %>
     </div>
@@ -52,23 +63,23 @@
   <div class="control-group">
     <%= f.label 'Options', :class => 'control-label' %>
     <div class="controls">
-      <div id="options_container_for_edit" >
+      <div id="options_container" >
         <% if @field.options.present? %>
           <% @field.options.each do |hash| %>
             <div>
               <input name="field[options][][text]" type="text" value="<%= hash[:text] %>" />
               <input name="field[options][][value]" type="text" value="<%= hash[:value] %>" />
-              <a class="link_to_remove_option_for_edit">[-] Remove</a>
+              <a class="link_to_remove_option">[-] Remove</a>
             </div>     
           <% end %>
-          <a class="link_to_add_option_for_edit">[+] Add Another Option</a>
+          <a class="link_to_add_option">[+] Add Another Option</a>
         <% end %>
       </div>
     </div>
   </div>
 
   <div class="actions">
-    <%= f.submit 'Update', :class => "btn btn-primary" %>
+    <%= f.submit action_name == 'new' ? 'Create' : 'Update', :class => 'btn btn-primary'%>
     <%= link_to 'Cancel', fields_path, :class => "btn" %>
   </div>
 <% end %>
